# people_facts

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/people_facts/: node_people_facts.hpp
launch/: people_facts.launch.py
module/: people_facts.yaml
src/: main.cpp  node.cpp
src/people_facts/: node_people_facts.cpp
test/: test_node_people_facts.cpp  test_people_facts.cpp  test_people_facts.test
