<?xml version="1.0"?>
<package format="2">
  <name>people_facts</name>
  <version>1.9.9</version>
  <description>The people_facts package</description>

  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>pal_module_cmake</build_depend>

  <depend>hri</depend>
  <depend>hri_msgs</depend>
  <depend>kb_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>hri_msgs</test_depend>
  <test_depend>kb_msgs</test_depend>
  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>rosgraph_msgs</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
